[metadata]
name = atilgan
version = 0.0.1
author = ATILGAN Quant Research
author_email = mkaanerkoc@gmail.com
description = A package contains common toolbox for quantitative researchs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mkaanerkoc/atilgan/
project_urls =
    Bug Tracker = https://github.com/mkaanerkoc/atilgan/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src